--- a/index.html
+++ b/index.html
@@ -5,54 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Веб Студія</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
-    <header>
+    <header class="page-header">
       <nav>
-        <a lang="en" href="./index.html">Web<span>Studio</span></a>
-        <ul>
-          <li><a href="#">Студія</a></li>
-          <li><a href="#">Портфоліо</a></li>
-          <li><a href="#">Контакти</a></li>
+        <a lang="en" href="./index.html" class="logo"
+          >Web<span class="header-studio-logo">Studio</span></a
+        >
+        <ul class="nav-list">
+          <li><a href="#" class="link current">Студія</a></li>
+          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li><a href="#" class="link">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="header-contacts">
+        <li>
+          <a href="mailto:info@devstudio.com" class="header-link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="header-link">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <section class="hero">
+        <h1 class="main-heading">Ефективні рішення для вашого бізнесу</h1>
+        <button class="hero-btn" type="button">Замовити послугу</button>
       </section>
-      <section>
-        <h2>Особливості</h2>
+      <section class="properties">
+        <h2 class="properties-title hidden">Особливості</h2>
         <ul>
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
+            <h3 class="property-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="property-dscr">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
+            <h3 class="property-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="property-dscr">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>
+            <h3 class="property-title">ПЛАНУВАННЯ</h3>
+            <p class="property-dscr">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
+            <h3 class="property-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="property-dscr">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -60,7 +75,7 @@
         </ul>
       </section>
       <section>
-        <h2>Чим ми займаємося</h2>
+        <h2 class="whatwedo-title">Чим ми займаємося</h2>
         <ul>
           <li>
             <img
@@ -86,7 +101,7 @@
         </ul>
       </section>
       <section>
-        <h2>Наша команда</h2>
+        <h2 class="ourteam-title">Наша команда</h2>
         <ul>
           <li>
             <img
@@ -94,8 +109,8 @@
               alt="Ігор Дем'яненко"
               width="270"
             />
-            <h3>Ігор Дем'яненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="name">Ігор Дем'яненко</h3>
+            <p class="position" lang="en">Product Designer</p>
           </li>
           <li>
             <img
@@ -103,8 +118,8 @@
               alt="Ольга Рєпіна"
               width="270"
             />
-            <h3>Ольга Рєпіна</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="name">Ольга Рєпіна</h3>
+            <p class="position" lang="en">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -112,8 +127,8 @@
               alt="Микола Тарасов"
               width="270"
             />
-            <h3>Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="name">Микола Тарасов</h3>
+            <p class="position" lang="en">Marketing</p>
           </li>
           <li>
             <img
@@ -121,26 +136,37 @@
               alt="Михайло Єрмаков"
               width="270"
             />
-            <h3>Михайло Єрмаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="name">Михайло Єрмаков</h3>
+            <p class="position" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a lang="en" href="./index.html">Web<span>Studio</span></a>
-      <address>
+    <footer class="footer">
+      <a lang="en" href="./index.html" class="logo"
+        >Web<span class="footer-studio-logo">Studio</span></a
+      >
+      <address class="adress">
         <ul>
           <li>
             <a
               href="https://www.google.com/maps/place/Lesi+Ukrainky+Blvd,+26,+Kyiv,+Ukraine,+02000/@50.4265605,30.5364733,16.65z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+              class="adress-link"
               target="_blank"
               rel="noreferrer noopener"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="footer-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="footer-link"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
